--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body{
     font-family: sans-serif;
 }
 h1{
-    color: gray;
+    color: black;
     font-family: 'Times New Roman', Times, serif;
 }
 h2{
